# power-stability-radius

./: .gitignore  README.md  UNITS_CONTRACT.md  architecture.txt  pyproject.toml
.github/workflows/: ci.yml
conf/: config.yaml
conf/experiments/: case118.yaml  case1354_pegase.yaml  case30.yaml  case300.yaml  case9241_pegase.yaml  report.yaml
config/: main.yaml
config/experiments/: case118.yaml  case1354_pegase.yaml  case30.yaml  case300.yaml  case9241_pegase.yaml
examples/: script_demo.py
src/: power_stability_radius.py
src/stability_radius/: __init__.py  cli.py  config.py  utils.py  workflows.py
src/stability_radius/dc/: dc_model.py
src/stability_radius/opf/: __init__.py  pypsa_opf.py
src/stability_radius/parsers/: matpower.py
tests/: conftest.py  test_certificate_concept.py  test_certificate_interpretation.py  test_cli_monte_carlo_requires_paths.py  test_cli_report_cases_parsing.py  test_config_extends.py  test_dc_model.py  test_download.py  test_highs_config_solver_options  test_logging.py  test_matpower_parser_fallback.py  test_opf_dc_consistency.py  test_pypsa_opf_pp_gen_limits.py  test_radii_common_line_limits.py  test_radii_l2.py  test_radii_metric.py  test_radii_nminus1.py  test_radii_probabilistic.py  test_radius_concept_synthetic.py  test_report_structure.py  test_unit_consistency_end_to_end.py  test_utils_imports.py  test_verification_report_and_monte_carlo.py
verification/: generate_report.py  monte_carlo.py  report.md
verification/results/: case118.json  case1354_pegase.json  case30.json  case300.json
(+17 files in other folders)
